[package]
name = "caret"
version = "0.1.0"
authors = ["Rune Tynan <runetynan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12"

[dependencies.chumsky]
version = "0.8"
features = ["nightly"]
#git = "https://github.com/zesterer/chumsky"
